# todo

./: .gitignore  LICENSE  README.md  create_db.sql  pyproject.toml
src/todo/: __init__.py  errors.py  routes.py
src/todo/controller/: add.py  change.py  controller.py  create_todo.py  create_todo_controller.py  delete_todo.py  delete_todo_controller.py  home.py  remove.py  show_modal.py  show_todos.py  show_todos_controller.py  update_todo.py  update_todo_controller.py
src/todo/entity/: __init__.py  entity.py  todo.py
src/todo/repository/: __init__.py  in_memory_todo_repository.py  repository.py  sqlite_todo_repository.py  todo_repository.py
src/todo/repository/sqlite/: create_db.sql  sqlite_repository.py
src/todo/repository/sqlite/queries/: get_all.sql  get_by_id.sql  remove.sql  save.sql
src/todo/static/css/: style.css
src/todo/template/: base.html  base.py  home.html  home.py  todo.html  todo.py  todo_item.html
src/todo/template/components/: spinner.py
src/todo/template/components/modal/: __init__.py  styles.py
src/todo/template/components/text_input/: __init__.py  styles.py
src/todo/template/components/todo/: __init__.py  styles.py
src/todo/template/pages/base/: __init__.py  styles.py
src/todo/template/pages/home/: __init__.py  styles.py
src/todo/template/scss/: globals.scss
src/todo/use_case/: add.py  change.py  create_todo.py  delete_todo.py  home.py  remove.py  show_todos.py  update_todo.py  use_case.py
tests/: test_create_todo.py  test_delete_todo.py  test_show_todos.py  test_sqlite_todo_repository.py  test_update_todo.py  test_use_cases.py
