[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiosqlite>=0.20.0",
    "builder",
    "python-multipart>=0.0.9",
    "returns",
    "starlette>=0.38.5",
    "taskipy>=1.13.0",
    "uvicorn>=0.30.6",
    "uvloop>=0.20.0",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-watch>=4.2.0",]

[tool.uv.sources]
builder = { git = "https://github.com/wosteimer/builder" }
returns = { git = "https://github.com/wosteimer/returns" }

[tool.taskipy.tasks]
dev = "uvicorn todo:main --reload --factory"
test-watch = "ptw -- -s -x --cov=src -vv"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
